--- a/notebook/logging_experiment.ipynb
+++ b/notebook/logging_experiment.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "e8c123b8",
    "metadata": {},
    "outputs": [],
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "dd88374c",
    "metadata": {},
    "outputs": [],
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "1a2d1627",
    "metadata": {},
    "outputs": [],
@@ -44,17 +44,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "eb6785c1",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'2025-07-26_14-42-33.log'"
+       "'2025-07-26_16-27-31.log'"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "bb93f431",
    "metadata": {},
    "outputs": [],
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "bff33578",
    "metadata": {},
    "outputs": [],
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "id": "8d631e06",
    "metadata": {},
    "outputs": [],
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "id": "44a96bd9",
    "metadata": {},
    "outputs": [],
@@ -109,8 +109,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "fa0b19cd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import structlog"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "836060ca",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "logger = structlog.get_logger()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "f604a566",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2025-07-26 16:27:31 [info     ] Structlog setup complete.      filename=log_file.pdf user_id=123\n"
+     ]
+    }
+   ],
+   "source": [
+    "logger.info(\"Structlog setup complete.\", user_id=123, filename =\"log_file.pdf\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b9ee7298",
    "metadata": {},
    "outputs": [],
    "source": []
