--- a/notebook/exception_experiment.ipynb
+++ b/notebook/exception_experiment.ipynb
@@ -24,23 +24,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 24,
    "id": "c7b89797",
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Error details: (<class 'ZeroDivisionError'>, ZeroDivisionError('division by zero'), <traceback object at 0x000002C5C85B3540>)\n"
+     ]
+    },
+    {
      "ename": "DocumentPortalException",
-     "evalue": "\n        Error in [C:\\Users\\harsh\\AppData\\Local\\Temp\\ipykernel_376\\11436085.py] at line [22]\n        Message: division by zero\n        Traceback:\n        Traceback (most recent call last):\n  File \"C:\\Users\\harsh\\AppData\\Local\\Temp\\ipykernel_376\\11436085.py\", line 22, in <module>\n    a = 1 / 0\nZeroDivisionError: division by zero\n\n        ",
+     "evalue": "\n        Error in [C:\\Users\\harsh\\AppData\\Local\\Temp\\ipykernel_376\\954477907.py] at line [23]\n        Message: division by zero\n        Traceback:\n        Traceback (most recent call last):\n  File \"C:\\Users\\harsh\\AppData\\Local\\Temp\\ipykernel_376\\954477907.py\", line 23, in <module>\n    a = 1 / 0\nZeroDivisionError: division by zero\n\n        ",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mZeroDivisionError\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[22], line 22\u001b[0m\n\u001b[0;32m     20\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m     21\u001b[0m     \u001b[38;5;66;03m# Simulate an error\u001b[39;00m\n\u001b[1;32m---> 22\u001b[0m     a \u001b[38;5;241m=\u001b[39m \u001b[38;5;241;43m1\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;241;43m/\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\n\u001b[0;32m     23\u001b[0m     \u001b[38;5;28mprint\u001b[39m(a)\n",
+      "Cell \u001b[1;32mIn[24], line 23\u001b[0m\n\u001b[0;32m     21\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m     22\u001b[0m     \u001b[38;5;66;03m# Simulate an error\u001b[39;00m\n\u001b[1;32m---> 23\u001b[0m     a \u001b[38;5;241m=\u001b[39m \u001b[38;5;241;43m1\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;241;43m/\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\n\u001b[0;32m     24\u001b[0m     \u001b[38;5;28mprint\u001b[39m(a)\n",
       "\u001b[1;31mZeroDivisionError\u001b[0m: division by zero",
       "\nDuring handling of the above exception, another exception occurred:\n",
       "\u001b[1;31mDocumentPortalException\u001b[0m                   Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[22], line 27\u001b[0m\n\u001b[0;32m     25\u001b[0m app_exc\u001b[38;5;241m=\u001b[39mDocumentPortalException(e,sys)\n\u001b[0;32m     26\u001b[0m logger\u001b[38;5;241m.\u001b[39merror(app_exc)\n\u001b[1;32m---> 27\u001b[0m \u001b[38;5;28;01mraise\u001b[39;00m app_exc\n",
-      "\u001b[1;31mDocumentPortalException\u001b[0m: \n        Error in [C:\\Users\\harsh\\AppData\\Local\\Temp\\ipykernel_376\\11436085.py] at line [22]\n        Message: division by zero\n        Traceback:\n        Traceback (most recent call last):\n  File \"C:\\Users\\harsh\\AppData\\Local\\Temp\\ipykernel_376\\11436085.py\", line 22, in <module>\n    a = 1 / 0\nZeroDivisionError: division by zero\n\n        "
+      "Cell \u001b[1;32mIn[24], line 28\u001b[0m\n\u001b[0;32m     26\u001b[0m app_exc\u001b[38;5;241m=\u001b[39mDocumentPortalException(e,sys)\n\u001b[0;32m     27\u001b[0m logger\u001b[38;5;241m.\u001b[39merror(app_exc)\n\u001b[1;32m---> 28\u001b[0m \u001b[38;5;28;01mraise\u001b[39;00m app_exc\n",
+      "\u001b[1;31mDocumentPortalException\u001b[0m: \n        Error in [C:\\Users\\harsh\\AppData\\Local\\Temp\\ipykernel_376\\954477907.py] at line [23]\n        Message: division by zero\n        Traceback:\n        Traceback (most recent call last):\n  File \"C:\\Users\\harsh\\AppData\\Local\\Temp\\ipykernel_376\\954477907.py\", line 23, in <module>\n    a = 1 / 0\nZeroDivisionError: division by zero\n\n        "
      ]
     }
    ],
@@ -51,6 +58,7 @@
     "    \"\"\"Custom exception for Document Portal\"\"\"\n",
     "    def __init__(self,error_message,error_details:sys):\n",
     "        _,_,exc_tb=error_details.exc_info()\n",
+    "        print(f\"Error details: {error_details.exc_info()}\")\n",
     "        self.file_name=exc_tb.tb_frame.f_code.co_filename\n",
     "        self.lineno=exc_tb.tb_lineno\n",
     "        self.error_message=str(error_message)\n",
@@ -76,16 +84,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "392b7b11",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(None, None, None)"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import sys\n",
+    "sys.exc_info()"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "52848088",
+   "id": "6d884f97",
    "metadata": {},
    "outputs": [],
    "source": []
